[Win64] Compile error after r165128. https://bugs.webkit.org/show_bug.cgi?id=129807

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-03-07
Reviewed by Mark Lam.

Source/JavaScriptCore:

* JavaScriptCore.vcxproj/LLInt/LLIntAssembly/build-LLIntAssembly.sh:
Check platform environment variable to determine if an assembler file should be generated.

Source/WTF:

* wtf/Platform.h: MSVC does not support computed goto.
Also enabled COMPUTED_GOTO_OPCODES when !ENABLE(LLINT_C_LOOP). This is needed because the ASM LLINT operates like COMPUTED_GOTO_OPCODES,
and relies on the related data structures being defined to support this. On Win32, the platform does not HAVE_COMPUTED_GOTO support,
but does want ENABLE_COMPUTED_GOTO_OPCODES because it uses the ASM LLINT.

Canonical link: https://commits.webkit.org/147927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165296 268f45cc-cd09-0410-ab3c-d52691b4dbfc